add proxyMap